Cleanup and additional debug logging
git-svn-id: https://openadaptor3.openadaptor.org/svn/openadaptor3/trunk@1902 c0ec5643-5123-0410-b01b-e101a1959115